--- a/estilos/estilosMenu.css
+++ b/estilos/estilosMenu.css
@@ -46,8 +46,7 @@
 }
 
 #itemNav1 {
-  width: 300px;
-  height: 100px;
+
   margin-left: 18px;
   font-size: 15px;
 }
@@ -140,8 +139,8 @@ ul {
 a::before {
   content: "";
   display: flex;
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 10px;
 }
 
 /* Estilos para la clase .liNavVer */
@@ -149,7 +148,7 @@ a::before {
   cursor: pointer;
   color: white;
   text-decoration: none;
-  margin-top: 30px;
+
   margin-left: -30px;
   font-size: 25px;
   text-align: start;
@@ -157,8 +156,7 @@ a::before {
   text-transform: capitalize;
   position: relative;
   transition: 0.5s;
-  margin: 0.8em;
-  margin-top: 30px;
+
   z-index: 1;
   border-radius: 10px;
   display: block;
@@ -224,9 +222,9 @@ a::before {
 }
 
 .colSecc {
-  display: flex;
-  width: 80%;
- 
+  display: inline-block;
+  width: 100%;
+  
   padding: 8px;
   justify-content: center;
 }
@@ -238,6 +236,7 @@ a::before {
 .container-fluidd {
   width: auto;
   justify-content: center;
+  height: auto;
 }
 
 .roww {
