--- a/estilos/estilosMenu.css
+++ b/estilos/estilosMenu.css
@@ -77,7 +77,7 @@
 		position: absolute;
 		background: rgba(0,0,0,0.5);
 		width: 100%;
-		height: 1000vh;
+		height: 100vh;
 		top: 0;left: 0;
 		transition: all 500ms ease;
 		opacity: 0;
@@ -99,7 +99,7 @@
 	}
 	#btn-menu:checked ~ .container-menu .cont-menu{
 		transform: translateX(0%);
-	}
+	}s
 	.cont-menu nav{
 		transform: translateY(15%);
 	}
@@ -117,7 +117,7 @@
 		background: #fff7f7;
     border-left: 5px solid blue;
     color: black;
-	height: 900px;
+	height: 7s0px;
 	}
 	.cont-menu label{
 		position: absolute;
