--- a/estilos/estilosMenu.css
+++ b/estilos/estilosMenu.css
@@ -1,145 +1,163 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates|Poppins&display=swap');
-	*{
-		margin: 0;
-		padding: 0;
-		box-sizing: border-box;
-		font-family: 'Montserrat Alternates', sans-serif;
-	}
-	body{
-    background-size: 50vw 50vh;
-    background-position:top;
-		background-repeat: no-repeat;
-    background: linear-gradient(0deg, rgba(81,85,87,1) 0%, rgba(226,227,229,1) 100%);  	}
-.capa{
-		position: fixed;
-		width: 100%;
-		height: 100vh;
-		background: rgba(255, 255, 255, 0.068);
-		z-index: -1;
-		top: 0;left: 0;
-	}
-	/*Estilos para el encabezado*/
-	.header{
-		width: 100%;
-		height: 100px;
-		position: fixed;
-		top: 0;left: 0;
-	}
-	.container{
-		width: 90%;
-		max-width: auto;
-		margin: auto;
-    height: auto;
-	}
-	.container .btn-menu, .logo{
-		float: left;
-		line-height:100px;
-	}
-	.container .btn-menu label{
-		color: #fff;
-		font-size: 25px;
-		cursor: pointer;
-	}
-	.logo h1{
-		color: #fff;
-		font-weight: 400;
-		font-size: 22px;
-		margin-left: 10px;
-	}
-	.container .menu{
-		float: right;
-		line-height: 100px;
-	}
-	.container .menu a{
-		display: inline-block;
-		padding: 15px;
-		
-		line-height: normal;
-		text-decoration: none;
-		color: #000000;
-		transition: all 0.3s ease;
-		border-bottom: 2px solid transparent;
-		font-size: 15px;
-		margin-right: 5px;
-	}
-	.container .menu a:hover{
-		border-bottom: 2px solid blue;
-		padding-bottom: 5px;
-	}
-	/*Fin de Estilos para el encabezado*/
 
-	/*Menù lateral*/
-	#btn-menu{
-		display: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
+
+body {
+    background-size: 50vw 50vh;
+    background-position: top;
+    background-repeat: no-repeat;
+	background: linear-gradient(0deg, rgba(0,22,249,0.24413515406162467) 14%, rgba(0,151,249,0.7819502801120448) 100%);}
+
+.capa {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.068);
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+
+.header {
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.container {
+    width: 90%;
+    max-width: auto;
+    margin: auto;
+    height: auto;
+}
+
+.container .btn-menu, .logo {
+    float: left;
+    line-height:100px;
+}
+
+.container .btn-menu label {
+    color: #fff;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.logo h1 {
+    color: #fff;
+    font-weight: 400;
+    font-size: 22px;
+    margin-left: 10px;
+}
+
+.container .menu {
+    float: right;
+    line-height: 100px;
+}
+
+.container .menu a {
+    display: inline-block;
+    padding: 15px;
+    line-height: normal;
+    text-decoration: none;
+    color: #333;
+    transition: all 0.3s ease;
+    border-bottom: 2px solid transparent;
+    font-size: 15px;
+    margin-right: 5px;
+}
+
+.container .menu a:hover {
+    border-bottom: 2px solid blue;
+    padding-bottom: 5px;
+}
+
+#btn-menu {
+    display: none;
     color: #1c1c1c;
-	}
-	.container-menu{
-		position: absolute;
-		background: rgba(0,0,0,0.5);
-		width: 100%;
-		height: 100vh;
-		top: 0;left: 0;
-		transition: all 500ms ease;
-		opacity: 0;
-		visibility: hidden;
-	}
-	#btn-menu:checked ~ .container-menu{
-		opacity: 1;
-		visibility: visible;
-	}
-	.cont-menu{
-		width: 100%;
-		max-width: 250px;
-		
-		height:1000px;
+}
+
+.container-menu {
+    position: absolute;
+    background-color:#333;
+    width: 250px; /* Ajusta el ancho según tus preferencias */
+    height: 700px; /* Ajusta la altura según tus preferencias */
+    top: 0;
+    left: 0;
+    transition: all 500ms ease;
+    opacity: 0;
+    visibility: hidden;
+    background-size: 100% 100%; /* Ajusta el tamaño del fondo negro */
+}
+
+#btn-menu:checked ~ .container-menu {
+    opacity: 1;
+    visibility: visible;
+}
+
+.cont-menu {
+    width: 100%;
+    max-width: 250px;
+    height: 1000px;
     border-bottom-right-radius: 30px;
-		position: fixed;
-		transition: all 500ms ease;
-		transform: translateX(-100%);
-	}
-	#btn-menu:checked ~ .container-menu .cont-menu{
-		transform: translateX(0%);
-	}s
-	.cont-menu nav{
-		transform: translateY(15%);
-	}
-	.cont-menu nav a{
-		display: flex;
-		text-decoration: none;
-		padding: 20px;
-		
-		color: #c7c7c7;
-		border-left: 5px solid transparent;
-		transition: all 400ms ease;
-	}
-	.cont-menu nav a:hover{
-		border-left: 5px solid #c7c7c7;
-		background: #fff7f7;
+    position: fixed;
+    transition: all 500ms ease;
+    transform: translateX(-100%);
+}
+
+#btn-menu:checked ~ .container-menu .cont-menu {
+    transform: translateX(0%);
+}
+
+.cont-menu nav {
+    transform: translateY(15%);
+}
+
+.cont-menu nav a {
+    display: flex;
+    text-decoration: none;
+    padding: 20px;
+    color: #c7c7c7;
+    border-left: 5px solid transparent;
+    transition: all 400ms ease;
+}
+
+.cont-menu nav a:hover {
+    border-left: 5px solid #c7c7c7;
+    background: #fff7f7;
     border-left: 5px solid blue;
     color: black;
-	height: 7s0px;
-	}
-	.cont-menu label{
-		position: absolute;
-		right: 5px;
-		top: 10px;
-		color: #fff;
-		cursor: pointer;
-		font-size: 18px;
-	}
+    height: 70px;
+}
 
-  #logoInventarit{
+.cont-menu label {
+    position: absolute;
+    right: 5px;
+    top: 10px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+#logoInventarit {
     width:100%;
     height: 100%;
-  }
+}
 
-  #logoInven{
+#logoInven {
     margin-top: -20px;
     width: 300px;
     height: 150px;
-  }
-  .menu {
-    backdrop-filter: blur(5px);
+}
+
+.menu {
+    backdrop-filter: blur(20px);
     background-color: rgba(0, 0, 0, 0.107);
     color: #fff;
     border-radius: 10px;
@@ -148,9 +166,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+	height: 50px;
     padding: 10px 20px;
+    flex-direction: row;
 }
-
 
 .menu a {
     text-decoration: none;
@@ -158,18 +177,19 @@
     margin: 0 15px;
 }
 
-
 .search {
-    display: flex;
+    
+	height: 20px;
     align-items: center;
     transition: transform 0.30s ease;
 }
+
 .search:hover {
-  display: flex;
-  align-items: center;
-  transform: scale(1.4);
-  border: transparent;
-  box-shadow: 0px 0px 10px blue;
+    display: flex;
+    align-items: center;
+    transform: scale(1.4);
+    border: transparent;
+    box-shadow: 0px 0px 10px blue;
 }
 
 .notifications {
@@ -195,23 +215,20 @@
     display: none;
     position: absolute;
     backdrop-filter: blur(5px);
-    background-color: rgba(0, 0, 0, 0.107); 
+    background-color: rgba(0, 0, 0, 0.107);
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border-top-right-radius: 10px;
     list-style: none;
     padding: 10px;
-  
 }
 
 .user-menu a {
     text-decoration: none;
     color: #0026ff;
-    
     display: block;
     margin-bottom: 5px;
 }
-
 
 .user:hover .user-menu {
     display: block;
