--- a/estilos/estilosMenu.css
+++ b/estilos/estilosMenu.css
@@ -23,12 +23,19 @@ body {
     left: 0;
 }
 
+#imgCampana{
+ width: 30px;
+ height: 30px;
+ margin-left: 20px;
+}
+
 .header {
     width: 100%;
     height: 100px;
     position: fixed;
     top: 0;
     left: 0;
+
 }
 
 .container {
@@ -66,7 +73,7 @@ body {
     padding: 15px;
     line-height: normal;
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
     transition: all 0.3s ease;
     border-bottom: 2px solid transparent;
     font-size: 15px;
@@ -82,13 +89,49 @@ body {
     display: none;
     color: #1c1c1c;
 }
+:root {
+    --color: #254ac7; 
+    --hover: #3dc51b; 
+  }
+  
+  .btnAgregar {
+    cursor: pointer;
+    margin-left: 100px;
+    color: white;
+    background-color: rgba(0, 151, 249, 0.7819502801120448);
+    border: none;
+    padding: 10px;
+    border-radius: 2px;
+    box-shadow:
+      0.3em 0.3em 0 0 var(--color),
+      inset 0.3em 0.3em 0 0 var(--color);
+  }
+  
+  .btnAgregar:hover,
+  .btnAgregar:focus {
+    transform: scale(1.1, 1.1);
+    transition: all;
+    box-shadow:
+      inset 0 0 0 2em var(--hover);
+  }
+  
+  
+  
+
+#imgBar{
+    margin-top: 25px;
+    width: 50px;
+    height: 50px;
+}
 
 .container-menu {
-    position: absolute;
-    background-color:#333;
+    position: fixed;
+    background-color:rgba(0, 0, 0, 0.589);
+    box-shadow: 5px 5px 3px 5px #33333398;
     width: 300px; /* Ajusta el ancho según tus preferencias */
     height: 700px; /* Ajusta la altura según tus preferencias */
     top: 0;
+    backdrop-filter: blur(10px);
     left: 0;
     transition: all 500ms ease;
     opacity: 0;
@@ -101,12 +144,23 @@ body {
     visibility: visible;
 }
 
+#imgClose{
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+}
+
+#imgClose:hover{
+    transform:translateX(-20%);       
+    transform: scale(1.3,1.3);
+}
+
 .cont-menu {
     width: 100%;
     max-width: 300px;
     height: 1000px;
     border-bottom-right-radius: 30px;
-    position: fixed;
+    position:fixed;
     transition: all 500ms ease;
     transform: translateX(-100%);
 }
@@ -157,16 +211,15 @@ body {
 }
 
 .menu {
-    backdrop-filter: blur(20px);
-    background-color: rgba(0, 0, 0, 0.107);
+    
+    background-color: #333;
     color: #fff;
-    border-radius: 10px;
-    border-top-right-radius: 0%;
-    border-top-left-radius: 0%;
+    
     display: flex;
     justify-content: space-between;
-    align-items: center;
-	height: 50px;
+    align-items: center; 
+	height: 60px;
+
     padding: 10px 20px;
     flex-direction: row;
 }
@@ -179,9 +232,14 @@ body {
 
 .search {
     
-	height: 20px;
     align-items: center;
     transition: transform 0.30s ease;
+}
+
+
+#searchInput{
+    width: 400px;
+	height: 30px;
 }
 
 .search:hover {
@@ -191,6 +249,8 @@ body {
     border: transparent;
     box-shadow: 0px 0px 10px blue;
 }
+
+
 
 .notifications {
     display: flex;
@@ -214,11 +274,9 @@ body {
     margin-right: 80px;
     display: none;
     position: absolute;
-    backdrop-filter: blur(5px);
-    background-color: rgba(0, 0, 0, 0.107);
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-top-right-radius: 10px;
+    margin-left: -50px;
+    background-color: #333;
+    
     list-style: none;
     padding: 10px;
 }
