--- a/estilos/estilosForms.css
+++ b/estilos/estilosForms.css
@@ -1,3 +1,176 @@
-.row{
-    margin-top: 100px !important;
+body{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.headerr{
+    margin-top: 6%;
+   
+    width: 100%;
+    display: flex;
+    align-items: end;
+    
+}
+
+h6{
+    font-size: 25px;
+    color: rgba(255, 255, 255, 0.76);
+}
+
+h3{
+    font-size: 50px;
+    color: aliceblue;
+}
+
+.headerr h2 {
+     margin-left: 35%;
+     font-size: 50px;
+}
+input:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease-in-out;
+    border-color: rgb(251, 255, 12) !important;
+    border-style: groove !important;
+}
+
+.imgEditUser{
+    width:350px;
+    height: 300px;
+    margin-left: 10%;
+}
+label {
+    font-weight: bold;
+    color: white;
+
+}
+form {
+   width:fix-content !important;
+    display:inline-flex;
+    gap: 30px;
+    align-items: center !important;
+
+    
+}
+
+
+
+
+.containerr {
+    width:auto;
+    margin-bottom: 100px;
+    align-items: center;
+    justify-content: center;
+    justify-self: center;
+    background-color: #333;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  rgb(234, 255, 0) !important;
+}
+.headerr {
+    animation: slideInHeader 1s forwards;
+    z-index: 2;
+}
+
+.containerr {
+    animation: slideDownMenu 1s forwards;
+    z-index: 3;
+}#lbl{
+    width: 310px;
+}
+
+
+.headerr h1 {
+    margin-top: 300px; /* Ajusta el valor según sea necesario */
+}
+@keyframes slideInHeader {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideDownMenu {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(50);
+    }
+}
+
+@keyframes slideDownContent {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(50);
+    }
+}
+
+
+
+
+:root {
+    --colorr: #a0b502ba; 
+    --hover: #c8ff00; 
+    --colori: #8a0101;
+    --hoveri: #ff1515;
+  }
+.btnGuardar {
+    cursor: pointer;
+    height: 60px;
+    width: 120px;
+    margin-left: 50px;
+    color: white;
+    background-color: rgba(239, 255, 10, 0.782);
+    border: none;
+    padding: 10px;
+    border-radius: 2px;
+    box-shadow:
+      0.3em 0.3em 0 0 var(--colorr),
+      inset 0.3em 0.3em 0 0 var(--colorr);
+  }
+  
+  .btnGuardar:hover,
+  .btnGuardar:focus {
+    color: #333;
+    margin-bottom: 2px;
+    transform: scale(1.2, 1.2);
+    transition: all;
+    box-shadow:
+      inset 0 0 0 2em var(--hover);
+  }
+
+  .btnCancelar {
+    cursor: pointer;
+    height: 60px;
+    width: 120px;
+    margin-left: 50px;
+    color: white;
+    background-color: rgba(107, 0, 0, 0.782);
+    border: none;
+    padding: 10px;
+    border-radius: 2px;
+    box-shadow:
+      0.3em 0.3em 0 0 var(--colori),
+      inset 0.3em 0.3em 0 0 var(--colori);
+  }
+  
+  .btnCancelar:hover,
+  .btnCancelar:focus {
+    transform: scale(1.1, 1.1);
+    transition: all;
+    box-shadow:
+      inset 0 0 0 2em var(--hoveri);
+  }
+  
+
+.botones{
+    display: flex;
+    height: 100px;
+    margin-top: 80px;
+    padding: 20px;
+    max-width: 400px;
 }
