--- a/estilos/estilosMenu.css
+++ b/estilos/estilosMenu.css
@@ -1,19 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates|Poppins&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat Alternates', sans-serif;
+   
 }
-
 body {
-    background-size: 50vw 50vh;
-    background-position: top;
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat Alternates', sans-serif;
+    background-image: url("../images/bg.png");
+    background-size: cover;
     background-repeat: no-repeat;
-	background: linear-gradient(0deg, rgba(0,22,249,0.24413515406162467) 14%, rgba(0,151,249,0.7819502801120448) 100%);}
-
-.capa {
+    background-position: center;
+    overflow-x: hidden; 
+}
+    .capa {
     position: fixed;
     width: 100%;
     height: 100vh;
@@ -133,15 +135,17 @@ body {
     top: 0;
     backdrop-filter: blur(10px);
     left: 0;
-    transition: all 500ms ease;
-    opacity: 0;
+    transition: all 50ms ease;
+   
+    
     visibility: hidden;
     background-size: 100% 100%; /* Ajusta el tamaño del fondo negro */
 }
 
 #btn-menu:checked ~ .container-menu {
-    opacity: 1;
-    visibility: visible;
+    opacity: 1 !important ;
+    visibility: visible !important;
+    z-index: 1;
 }
 
 #imgClose{
