--- a/estilos/estilosUsuarios.css
+++ b/estilos/estilosUsuarios.css
@@ -7,23 +7,74 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.839);
     justify-content: center;
     align-items: center;
 }
 
 .modal-content {
-    background: linear-gradient(0deg, rgba(0,22,249,0.24413515406162467) 14%, rgba(0,151,249,0.7819502801120448) 100%);
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 400px;
+background-color: #333;    
+padding: 20px;
+    height: 200px;
+
+    border-radius: 5px;
+    max-width: 600px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     color: #fff;
 }
+#btnCerrarModal{
+    cursor: pointer;
+    height: 50px;
+    width: 120px;
+    margin-left: 50px;
+    color: white;
+    background-color: rgba(107, 0, 0, 0.782);
+    border: none;
+    padding: 10px;
+    border-radius: 2px;
+    box-shadow:
+      0.3em 0.3em 0 0 var(--colori),
+      inset 0.3em 0.3em 0 0 var(--colori);
+} 
+#btnCerrarModal:hover,
+  #btnCerrarModal:focus {
+    transform: scale(1.1, 1.1);
+    transition: all;
+    background-color: rgba(235, 0, 0, 0.782);
+    font-size: 18px;
+    box-shadow:
+      inset 0 0 0 2em var(--hoveri);
+  }
+#btnBorrarModal {
+    cursor: pointer;
+    height: 50px;
+    width: 120px;
+    margin-left: 50px;
+    color: white;
+    background-color: rgba(11, 231, 95, 0.782);
+    border: none;
+    padding: 10px;
+    border-radius: 2px;
+    box-shadow:
+      0.3em 0.3em 0 0 var(--colorr),
+      inset 0.3em 0.3em 0 0 var(--colorr); /* Agrega una transición para el cambio de color */
+}
+
+#btnBorrarModal:hover,
+  #btnBorrarModal:focus {
+    transform: scale(1.1, 1.1);
+    background-color: rgb(8, 255, 103);
+    transition: ease-in-out;
+    font-size: 18px;
+    box-shadow:
+      inset 0 2 4 2em var(--hover);
+  }
+
 
 .modal-content h4 {
     margin-bottom: 15px;
+    font-size: 26px;
 }
 
 .modal-content p {
@@ -198,7 +249,7 @@
 #agregarTXT {
     margin-right: 20px;
     margin-top: 10px;
-    font-size: 15gpx;
+    font-size: 15px;
 }
 body {
             font-family: Arial, sans-serif;
@@ -220,23 +271,27 @@ body {
         }
 
         .headerTabla {
-            
+            background-color: #ffffff77;
             backdrop-filter: blur(10px);
+            text-align: center;
+            justify-content: center;
+            align-items: center;
             margin-left: 10%;
-            box-shadow: 20px 18px 26px rgba(0, 0, 0, 0.1);
+            box-shadow: 20px 18px 26px rgba(0, 0, 0, 0.322);
             margin-top: 100px;
             font-size: 24px; 
-            border-radius: 15px;
+            border-radius: 5px;
             padding: 5px;
             text-align: center;
             width: 80%;
-            max-width: 900px;
+            width: 500px;
             margin: 50px auto;
             position: relative;
             height: 100px;
         }
 
         .headerTabla h1 {
+            font-size: 60px;
             color: #333;
         }
 
@@ -294,6 +349,34 @@ body {
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
 
+
+        #enlaceEditar {
+            color: white;
+            background-color: rgb(188, 217, 27);
+            padding: 5px 10px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        
+        #enlaceEditar:hover {
+            background-color: rgb(88, 100, 0);
+        }
+        
+        #enlaceBorrar {
+            color: white;
+            background-color: rgb(178, 0, 0);
+            padding: 5px 10px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        
+        #enlaceBorrar:hover {
+            background-color: darkred;
+        }
+        
+
         .tabla a {
             display: inline-block;
             margin: 5px;
@@ -342,12 +425,12 @@ body {
 
         .header {
             animation: slideInHeader 1s forwards;
-            z-index: 2;
+            z-index: 1;
         }
-
+        
         .container-menu {
             animation: slideDownMenu 1s forwards;
-            z-index: 3;
+            z-index: 3; 
         }
 
         .header h1 {
